docs(bridge): doc renaming updates
Signed-off-by: prmellor <pmellor@redhat.com>

--- a/documentation/api/io.strimzi.api.kafka.model.bridge.KafkaBridgeHttpConfig.adoc
+++ b/documentation/api/io.strimzi.api.kafka.model.bridge.KafkaBridgeHttpConfig.adoc
@@ -1,9 +1,9 @@
 :_mod-docs-content-type: CONCEPT
 
-Configures HTTP access to a Kafka cluster for the Kafka Bridge.
-The default HTTP configuration is for the Kafka Bridge to listen on port 8080.
+Configures HTTP access to a Kafka cluster for the HTTP Bridge.
+The default HTTP configuration is for the HTTP Bridge to listen on port 8080.
 
-.Example Kafka Bridge HTTP configuration
+.Example HTTP Bridge HTTP configuration
 [source,yaml,subs="attributes+"]
 ----
 apiVersion: {KafkaBridgeApiVersion}
@@ -20,7 +20,7 @@ spec:
   # ...
 ----
 
-As well as enabling HTTP access to a Kafka cluster, HTTP properties provide the capability to enable and define access control for the Kafka Bridge through Cross-Origin Resource Sharing (CORS).
+As well as enabling HTTP access to a Kafka cluster, HTTP properties provide the capability to enable and define access control for the HTTP Bridge through Cross-Origin Resource Sharing (CORS).
 CORS is a HTTP mechanism that allows browser access to selected resources from more than one origin.
 To configure CORS, you define a list of allowed resource origins and HTTP access methods.
 For the origins, you can use a URL or a Java regular expression.
