--- a/documentation/modules/managing/con-custom-resources-status.adoc
+++ b/documentation/modules/managing/con-custom-resources-status.adoc
@@ -55,7 +55,7 @@ KafkaAutoRebalanceStatus
 
 ¦KafkaBridge
 ¦KafkaBridgeStatus
-¦The Kafka Bridge
+¦The HTTP Bridge
 
 ¦KafkaRebalance
 ¦KafkaRebalanceStatus
