--- a/documentation/modules/metrics/ref_metrics-alertmanager-examples.adoc
+++ b/documentation/modules/metrics/ref_metrics-alertmanager-examples.adoc
@@ -17,7 +17,7 @@ The `prometheus-rules` directory contains example rules for the following compon
 * Kafka
 * Entity Operator
 * Kafka Connect
-* Kafka Bridge
+* HTTP Bridge
 * MirrorMaker2
 * Kafka Exporter
 
