--- a/documentation/api/io.strimzi.api.kafka.model.bridge.KafkaBridgeConsumerSpec.adoc
+++ b/documentation/api/io.strimzi.api.kafka.model.bridge.KafkaBridgeConsumerSpec.adoc
@@ -1,8 +1,8 @@
 :_mod-docs-content-type: CONCEPT
 
-Configures consumer options for the Kafka Bridge.
+Configures consumer options for the HTTP Bridge.
 
-.Example Kafka Bridge consumer configuration
+.Example HTTP Bridge consumer configuration
 [source,yaml,subs="attributes+"]
 ----
 apiVersion: {KafkaBridgeApiVersion}
@@ -47,10 +47,10 @@ Properties with the following prefixes cannot be set:
 * `ssl.` 
 
 If the `config` property contains an option that cannot be changed, it is disregarded, and a warning message is logged to the Cluster Operator log file.
-All other supported options are forwarded to Kafka Bridge, including the following exceptions to the options configured by Strimzi:
+All other supported options are forwarded to HTTP Bridge, including the following exceptions to the options configured by Strimzi:
 
 * Any `ssl` configuration for xref:con-common-configuration-ssl-reference[supported TLS versions and cipher suites]
 
 IMPORTANT: The Cluster Operator does not validate keys or values in the `config` object.
-If an invalid configuration is provided, the Kafka Bridge deployment might not start or might become unstable.
-In this case, fix the configuration so that the Cluster Operator can roll out the new configuration to all Kafka Bridge nodes.
+If an invalid configuration is provided, the HTTP Bridge deployment might not start or might become unstable.
+In this case, fix the configuration so that the Cluster Operator can roll out the new configuration to all HTTP Bridge nodes.
