--- a/documentation/assemblies/overview/assembly-kafka-components.adoc
+++ b/documentation/assemblies/overview/assembly-kafka-components.adoc
@@ -16,7 +16,7 @@ A standard Kafka deployment using Strimzi might include the following components
 * *Kafka Connect* cluster for external data connections
 * *Kafka MirrorMaker* cluster to mirror data to another Kafka cluster
 * *Kafka Exporter* to extract additional Kafka metrics data for monitoring
-* *Kafka Bridge* to enable HTTP-based communication with Kafka
+* *HTTP Bridge* to enable HTTP-based communication with Kafka
 * *Cruise Control* to rebalance topic partitions across brokers
 
 Not all of these components are required, though you need Kafka as a minimum for a Strimzi-managed Kafka cluster.
