--- a/documentation/modules/metrics/ref-strimzi-metrics-reporter-config.adoc
+++ b/documentation/modules/metrics/ref-strimzi-metrics-reporter-config.adoc
@@ -30,7 +30,7 @@
 |`KafkaMirrorMaker2`
 |`kafka-mirror-maker-2metrics.yaml`
 
-|Kafka Bridge
+|HTTP Bridge
 |`KafkaBridge`
 |`kafka-bridge-metrics.yaml`
 |===
