--- a/documentation/modules/overview/con-overview-components-http-bridge-clients.adoc
+++ b/documentation/modules/overview/con-overview-components-http-bridge-clients.adoc
@@ -7,17 +7,17 @@
 
 [id='con-overview-components-http-bridge-clients_{context}']
 
-= Supported clients for the Kafka Bridge
+= Supported clients for the HTTP Bridge
 
 [role="_abstract"]
-You can use the Kafka Bridge to integrate both _internal_ and _external_ HTTP client applications with your Kafka cluster.
+You can use the HTTP Bridge to integrate both _internal_ and _external_ HTTP client applications with your Kafka cluster.
 
-Internal clients:: Internal clients are container-based HTTP clients running in _the same_ Kubernetes cluster as the Kafka Bridge itself.
-Internal clients can access the Kafka Bridge on the host and port defined in the `KafkaBridge` custom resource.
+Internal clients:: Internal clients are container-based HTTP clients running in _the same_ Kubernetes cluster as the HTTP Bridge itself.
+Internal clients can access the HTTP Bridge on the host and port defined in the `KafkaBridge` custom resource.
 
-External clients:: External clients are HTTP clients running _outside_ the Kubernetes cluster in which the Kafka Bridge is deployed and running.
-External clients can access the Kafka Bridge through an OpenShift Route, a loadbalancer service, or using an Ingress.
+External clients:: External clients are HTTP clients running _outside_ the Kubernetes cluster in which the HTTP Bridge is deployed and running.
+External clients can access the HTTP Bridge through an OpenShift Route, a loadbalancer service, or using an Ingress.
 
 .HTTP internal and external client integration
 
-image:kafka-bridge.png[Internal and external HTTP producers and consumers exchange data with the Kafka brokers through the Kafka Bridge]
+image:kafka-bridge.png[Internal and external HTTP producers and consumers exchange data with the Kafka brokers through the HTTP Bridge]
