[DOC] Update the lists of resources belonging to different operands
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/documentation/modules/configuring/ref-list-of-http-bridge-resources.adoc
+++ b/documentation/modules/configuring/ref-list-of-http-bridge-resources.adoc
@@ -10,7 +10,7 @@
 [role="_abstract"]
 The following resources are created by the Cluster Operator in the Kubernetes cluster:
 
-<bridge_cluster_name>-bridge:: Deployment which is in charge to create the HTTP Bridge worker node pods.
-<bridge_cluster_name>-bridge-service:: Service which exposes the HTTP Bridge REST interface.
-<bridge_cluster_name>-bridge-config:: ConfigMap which contains the HTTP Bridge ancillary configuration and is mounted as a volume by the Kafka broker pods.
-<bridge_cluster_name>-bridge:: Pod Disruption Budget configured for the HTTP Bridge worker nodes.
+`<bridge_cluster_name>-bridge`:: Deployment which is in charge to create the HTTP Bridge worker node pods.
+`<bridge_cluster_name>-bridge-service`:: Service which exposes the HTTP Bridge REST interface.
+`<bridge_cluster_name>-bridge-config`:: ConfigMap which contains the HTTP Bridge ancillary configuration and is mounted as a volume by the Kafka broker pods.
+`<bridge_cluster_name>-bridge`:: Pod Disruption Budget configured for the HTTP Bridge worker nodes.
