--- a/documentation/modules/configuring/ref-config-list-of-kafka-connect-resources.adoc
+++ b/documentation/modules/configuring/ref-config-list-of-kafka-connect-resources.adoc
@@ -10,16 +10,19 @@
 [role="_abstract"]
 The following resources are created by the Cluster Operator in the Kubernetes cluster:
 
-<connect_cluster_name>-connect:: Name given to the following Kafka Connect resources:
+`<connect_cluster_name>-connect`:: Name given to the following Kafka Connect resources:
 +
 - StrimziPodSet that creates the Kafka Connect worker node pods.
 - Headless service that provides stable DNS names to the Kafka Connect pods.
 - Service account used by the Kafka Connect pods.
 - Pod disruption budget configured for the Kafka Connect worker nodes.
 - Network policy managing access to the Kafka Connect REST API.
-<connect_cluster_name>-connect-<pod_id>:: Pods created by the Kafka Connect StrimziPodSet.
-<connect_cluster_name>-connect-api:: Service which exposes the REST interface for managing the Kafka Connect cluster.
-<connect_cluster_name>-connect-config:: ConfigMap which contains the Kafka Connect ancillary configuration and is mounted as a volume by the Kafka Connect pods.
-strimzi-<namespace-name>-<connect_cluster_name>-connect-init:: Cluster role binding used by the Kafka Connect cluster.
-<connect_cluster_name>-connect-build:: Pod used to build a new container image with additional connector plugins (only when Kafka Connect Build feature is used).
-<connect_cluster_name>-connect-dockerfile:: ConfigMap with the Dockerfile generated to build the new container image with additional connector plugins (only when the Kafka Connect build feature is used).
+- Role granting the Kafka Connect worker nodes access to read their certificates and credentials.
+
+`<connect_cluster_name>-connect-<pod_id>`:: Pods created by the Kafka Connect StrimziPodSet.
+`<connect_cluster_name>-connect-api`:: Service which exposes the REST interface for managing the Kafka Connect cluster.
+`<connect_cluster_name>-connect-config`:: ConfigMap which contains the Kafka Connect ancillary configuration and is mounted as a volume by the Kafka Connect pods.
+`<connect_cluster_name>-connect-role`:: Role binding granting the Kafka Connect worker nodes access to read their certificates and credentials.
+`strimzi-<namespace-name>-<connect_cluster_name>-connect-init`:: Cluster role binding used by the Kafka Connect cluster.
+`<connect_cluster_name>-connect-build`:: Pod used to build a new container image with additional connector plugins (only when Kafka Connect Build feature is used).
+`<connect_cluster_name>-connect-dockerfile`:: ConfigMap with the Dockerfile generated to build the new container image with additional connector plugins (only when the Kafka Connect build feature is used).
