--- a/documentation/modules/configuring/ref-list-of-kafka-cluster-resources.adoc
+++ b/documentation/modules/configuring/ref-list-of-kafka-cluster-resources.adoc
@@ -18,39 +18,29 @@ The following resources are created by the Cluster Operator in the Kubernetes cl
 `<kafka_cluster_name>-clients-ca-cert`:: Secret with the Clients CA public key. This key can be used to verify the identity of the Kafka users.
 `<kafka_cluster_name>-cluster-operator-certs`:: Secret with Cluster operators keys for communication with Kafka.
 
-.Kafka brokers
+.Kafka brokers and controllers
 
 `<kafka_cluster_name>-kafka`:: Name given to the following Kafka resources:
 +
-- StrimziPodSet for managing the Kafka pods.
 - Service account used by the Kafka pods.
 - PodDisruptionBudget that applies to all Kafka cluster node pool pods.
-
-`<kafka_cluster_name>-kafka-<pod_id>`:: Name given to the following Kafka resources:
-+
-- Pods created by the StrimziPodSet.
-- ConfigMaps with Kafka broker configuration.
+- Role granting the Kafka brokers and controllers access to read their certificates and credentials.
 
 `<kafka_cluster_name>-kafka-brokers`:: Service needed to have DNS resolve the Kafka broker pods IP addresses directly.
 `<kafka_cluster_name>-kafka-bootstrap`:: Service can be used as bootstrap servers for Kafka clients connecting from within the Kubernetes cluster.
 `<kafka_cluster_name>-kafka-external-bootstrap`:: Bootstrap service for clients connecting from outside the Kubernetes cluster. This resource is created only when an external listener is enabled. The old service name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
-`<kafka_cluster_name>-kafka-<pod_id>`:: Service used to route traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled. The old service name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
 `<kafka_cluster_name>-kafka-external-bootstrap`:: Bootstrap route for clients connecting from outside the Kubernetes cluster. This resource is created only when an external listener is enabled and set to type `route`. The old route name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
-`<kafka_cluster_name>-kafka-<pod_id>`:: Route for traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled and set to type `route`. The old route name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
 `<kafka_cluster_name>-kafka-<listener_name>-bootstrap`:: Bootstrap service for clients connecting from outside the Kubernetes cluster. This resource is created only when an external listener is enabled. The new service name will be used for all other external listeners.
-`<kafka_cluster_name>-kafka-<listener_name>-<pod_id>`:: Service used to route traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled. The new service name will be used for all other external listeners.
 `<kafka_cluster_name>-kafka-<listener_name>-bootstrap`:: Bootstrap route for clients connecting from outside the Kubernetes cluster. This resource is created only when an external listener is enabled and set to type `route`. The new route name will be used for all other external listeners.
-`<kafka_cluster_name>-kafka-<listener_name>-<pod_id>`:: Route for traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled and set to type `route`. The new route name will be used for all other external listeners.
-`<kafka_cluster_name>-<pool_name>-<pod_id>_`:: Secret with Kafka node public and private keys.
+`<kafka_cluster_name>-kafka-<listener_name>-bootstrap`:: Bootstrap ingress for clients connecting from outside the Kubernetes cluster. This resource is created only when an external listener is enabled and set to type `ingress`. The new route name will be used for all other external listeners.
 `<kafka_cluster_name>-network-policy-kafka`:: Network policy managing access to the Kafka services.
+`<kafka_cluster_name>-kafka-role`:: Role binding granting the Kafka brokers and controllers access to read their certificates and credentials.
 `strimzi-_namespace-name_-<kafka_cluster_name>-kafka-init`:: Cluster role binding used by the Kafka brokers.
 `<kafka_cluster_name>-jmx`:: Secret with JMX username and password used to secure the Kafka broker port. This resource is created only when JMX is enabled in Kafka.
-`data-<kafka_cluster_name>-kafka-<pod_id>`:: Persistent Volume Claim for the volume used for storing data for a specific Kafka broker. This resource is created only if persistent storage is selected for provisioning persistent volumes to store data.
-`data-<id>-<kafka_cluster_name>-kafka-<pod_id>`:: Persistent Volume Claim for the volume `id` used for storing data for a specific Kafka broker. This resource is created only if persistent storage is selected for JBOD volumes when provisioning persistent volumes to store data.
 
 .Kafka node pools
 
-If you are using Kafka node pools, the resources created apply to the nodes managed in the node pools whether they are operating as brokers, controllers, or both.
+The resources that are created per node pool.
 The naming convention includes the name of the Kafka cluster and the node pool: `<kafka_cluster_name>-<pool_name>`.
 
 `<kafka_cluster_name>-<pool_name>`:: Name given to the StrimziPodSet for managing the Kafka node pool.
@@ -58,8 +48,15 @@ The naming convention includes the name of the Kafka cluster and the node pool: 
 `<kafka_cluster_name>-<pool_name>-<pod_id>`:: Name given to the following Kafka node pool resources:
 +
 - Pods created by the StrimziPodSet.
+- Secret with Kafka node public and private keys.
 - ConfigMaps with Kafka node configuration.
+- Service used to route traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled. The old service name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
+- Route for traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled and set to type `route`. The old route name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
+- Ingress for traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled and set to type `ingress`. The old ingress name will be used for backwards compatibility when the listener name is `external` and port is `9094`.
 
+`<kafka_cluster_name>-<pool_name>-<listener_name>-<pod_id>`:: Service used to route traffic from outside the Kubernetes cluster to individual pods, or when using the type `cluster-ip` listener. This resource is created only when an external listener is enabled. The new service name will be used for all other external listeners.
+`<kafka_cluster_name>-<pool_name>-<listener_name>-<pod_id>`:: Route for traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled and set to type `route`. The new route name will be used for all other external listeners.
+`<kafka_cluster_name>-<pool_name>-<listener_name>-<pod_id>`:: Ingress for traffic from outside the Kubernetes cluster to individual pods. This resource is created only when an external listener is enabled and set to type `ingress`. The new ingress name will be used for all other external listeners.
 `data-<kafka_cluster_name>-<pool_name>-<pod_id>`:: Persistent Volume Claim for the volume used for storing data for a specific node. This resource is created only if persistent storage is selected for provisioning persistent volumes to store data.
 `data-<id>-<kafka_cluster_name>-<pool_name>-<pod_id>`:: Persistent Volume Claim for the volume `id` used for storing data for a specific node. This resource is created only if persistent storage is selected for JBOD volumes when provisioning persistent volumes to store data.
 
@@ -72,14 +69,15 @@ These resources are only created if the Entity Operator is deployed using the Cl
 - Deployment with Topic and User Operators.
 - Service account used by the Entity Operator.
 - Network policy managing access to the Entity Operator metrics.
+- Role granting the Entity Operator the rights to manage topics and users.
 
 `<kafka_cluster_name>-entity-operator-<random_string>`:: Pod created by the Entity Operator deployment.
 `<kafka_cluster_name>-entity-topic-operator-config`:: ConfigMap with ancillary configuration for Topic Operators.
 `<kafka_cluster_name>-entity-user-operator-config`:: ConfigMap with ancillary configuration for User Operators.
 `<kafka_cluster_name>-entity-topic-operator-certs`:: Secret with Topic Operator keys for communication with Kafka.
 `<kafka_cluster_name>-entity-user-operator-certs`:: Secret with User Operator keys for communication with Kafka.
-`strimzi-<kafka_cluster_name>-entity-topic-operator`:: Role binding used by the Entity Topic Operator.
-`strimzi-<kafka_cluster_name>-entity-user-operator`:: Role binding used by the Entity User Operator.
+`<kafka_cluster_name>-entity-topic-operator`:: Role binding used by the Entity Topic Operator.
+`<kafka_cluster_name>-entity-user-operator`:: Role binding used by the Entity User Operator.
 
 .Kafka Exporter
 
