--- a/documentation/modules/configuring/ref-config-list-of-kafka-connect-resources.adoc
+++ b/documentation/modules/configuring/ref-config-list-of-kafka-connect-resources.adoc
@@ -20,6 +20,7 @@ The following resources are created by the Cluster Operator in the Kubernetes cl
 - Role granting the Kafka Connect worker nodes access to read their certificates and credentials.
 
 `<connect_cluster_name>-connect-<pod_id>`:: Pods created by the Kafka Connect StrimziPodSet.
+`<connect_cluster_name>-connect-tls-trusted-certs`:: Secret with TLS certificates.
 `<connect_cluster_name>-connect-api`:: Service which exposes the REST interface for managing the Kafka Connect cluster.
 `<connect_cluster_name>-connect-config`:: ConfigMap which contains the Kafka Connect ancillary configuration and is mounted as a volume by the Kafka Connect pods.
 `<connect_cluster_name>-connect-role`:: Role binding granting the Kafka Connect worker nodes access to read their certificates and credentials.
