--- a/documentation/modules/configuring/ref-list-of-mirrormaker2-resources.adoc
+++ b/documentation/modules/configuring/ref-list-of-mirrormaker2-resources.adoc
@@ -20,6 +20,7 @@ The following resources are created by the Cluster Operator in the Kubernetes cl
 - Role granting the MirrorMaker 2 worker nodes access to read their certificates and credentials.
 
 `<mirrormaker2_cluster_name>-mirrormaker2-<pod_id>`:: Pods created by the MirrorMaker 2 StrimziPodSet.
+`<mirrormaker2_cluster_name>-mirrormaker2-tls-trusted-certs`:: Secret with TLS certificates.
 `<mirrormaker2_cluster_name>-mirrormaker2-api`:: Service which exposes the REST interface for managing the MirrorMaker 2 cluster.
 `<mirrormaker2_cluster_name>-mirrormaker2-config`:: ConfigMap which contains the MirrorMaker 2 ancillary configuration and is mounted as a volume by the MirrorMaker 2 pods.
 `<mirrormaker2_cluster_name>-mirrormaker2-role`:: Role binding granting the MirrorMaker 2 worker nodes access to read their certificates and credentials.
