--- a/documentation/shared/attributes.adoc
+++ b/documentation/shared/attributes.adoc
@@ -49,13 +49,8 @@
 :kafka-exporter-project: link:https://github.com/danielqsj/kafka_exporter[Kafka Exporter^]
 
 //OAuth attributes and links
-:keycloak-server-doc: link:https://www.keycloak.org/documentation.html[Keycloak documentation^]
-:keycloak-server-install-doc: link:https://www.keycloak.org/operator/installation[Installing the Keycloak Operator^]
-:keycloak-authorization-services: link:https://www.keycloak.org/docs/latest/authorization_services/index.html[Keycloak Authorization Services^]
-:keycloak-admin-guide: link:https://www.keycloak.org/docs/latest/authorization_services/index.html[Keycloak Server Administration^]
-:OAuthVersion: 0.17.1
-:oauth-demo-keycloak: link:https://github.com/strimzi/strimzi-kafka-oauth/tree/{OAuthVersion}/examples[Using Keycloak as the OAuth 2.0 authorization server^]
-:oauth-demo-hydra: link:https://github.com/strimzi/strimzi-kafka-oauth/tree/{OAuthVersion}/examples/docker#running-with-hydra-using-ssl-and-opaque-tokens[Using Hydra as the OAuth 2.0 authorization server^]
+:keycloak-docs: link:https://www.keycloak.org/documentation[Keycloak documentation^]
+:oauth-project: link:https://github.com/strimzi/strimzi-kafka-oauth[Strimzi Kafka OAuth project documentation^]
 
 // External links
 :JavaServiceProvider: link:https://www.baeldung.com/java-spi[Java Service Provider Interface^]
